Fix letters being cut off

--- a/src/assets/css/2-design-tokens/_typography.scss
+++ b/src/assets/css/2-design-tokens/_typography.scss
@@ -11,7 +11,7 @@
 h1, h2, h3, h4, h5, h6, p {
   font-family: var(--font-body);
   margin: 0;
-  line-height: 1;
+  line-height: 1.2;
   font-weight: 400;
   color: $heading;
 }
